# AIE7

./: .gitignore
00_AIM_Quicklinks/: README.md
01_Prompt Engineering and Prototyping Best Practices/: ACTIVITIES.md
02_Embeddings_and_RAG/: .gitignore  Pythonic_RAG_Assignment.ipynb
04_Production_RAG/: ACTIVITIES_QUESTIONS.md  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  improved_rag_prompt.py  langsmith_setup_fix.py
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  Combining evaluations LangSmith and Ragas.ipynb  Overall-plan-and-progress.md  [LangSmith] Advanced_Retrieval_with_LangChain_Assignment.ipynb  [Ragas] Advanced_Retrieval_with_LangChain_Assignment.ipynb  evaluation_cache.py  evaluation_cache2.py  evaluation_result_keys.txt  golden-master.csv  langsmith_ragas_composite_rankers.py  langsmith_rank_retrievers.py  langsmith_retriever_raw_stats.csv  langsmith_retriever_summary_stats.csv  performance_analysis.py  pyproject.toml  (+2 more)
13_MCP/: ACTIVITY.md  graph.py  langgraph.json  pyproject.toml  server.py  test_server.py  using-langgraph-stategraph.py
(+79 files in other folders)
